tests/custom/STARIS_2022/basic/tuples/tuple-addition-error/stderr.expected
Error:
    addition.essence:4:14:
  |
4 | letting z be x + y
  |              ^
Type error:
	Expected: "Number or Enum"
	Got: (int, int)

addition.essence:4:18:
  |
4 | letting z be x + y
  |                  ^
Type error:
	Expected: "Number or Enum"
	Got: (int, int)

cat: *.solution: No such file or directory
